Minor overflow fix

--- a/css/style.css
+++ b/css/style.css
@@ -229,7 +229,7 @@ html {
         height: 3rem;
     }
     .main-overlay {
-        top: 37%;
+        top: 37.5%;
         padding: 0.4rem;
     }
 }
